Mastodon Bird UI: Fix familiar followers margin spacing

--- a/app/javascript/styles/mastodon-bird-ui/components/profile/_profile-familiar-followers.scss
+++ b/app/javascript/styles/mastodon-bird-ui/components/profile/_profile-familiar-followers.scss
@@ -2,7 +2,7 @@
 .layout-single-column,
 .layout-multiple-columns {
   .account__header__familiar-followers {
-    margin-block-end: 0;
+    margin-block-end: 16px;
     margin-block-start: 0;
   }
 }
